# ratatui-mergearea

./: CONTRIBUTING.md  Cargo.toml  NOTICE.txt  README.md  flake.nix
bench/: Cargo.toml
bench/benches/: cursor.rs  delete.rs  insert.rs  search.rs
bench/src/: lib.rs
examples/: minimal.rs  password.rs  sync.rs  variable.rs  vim.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: edit.rs  insert_delete.rs
src/: cursor.rs  cursor_v2.rs  highlight.rs  history_v2.rs  lib.rs  scroll.rs  textarea.rs  util.rs  widget.rs  word.rs
src/input/: mod.rs  termion.rs
tests/: cursor.rs  history.rs  input.rs  search.rs  serde.rs  textarea.rs
