[package]
name = "ratatui-mergearea"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["vladimir <vladimir.fetisov@pm.me>"]
description = "Automerge text editor widget for ratatui based on tui-textarea"
license = "GPL-3.0"
repository = "https://github.com/3timeslazy/ratatui-mergearea"
readme = "README.md"
categories = ["text-editors", "text-processing", "local-first"]
keywords = ["textarea", "editor", "ratatui", "automerge", "crdt"]
include = ["/src", "/examples", "/tests", "/README.md", "/LICENSE.txt"]

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz"]
no-backend = []
# Other optional features
search = ["dep:regex"]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
crossterm = { package = "crossterm", version = "0.28", optional = true }
ratatui = { version = "0.29.0", default-features = false }
regex = { version = "1", optional = true }
termion = { version = "4.0", optional = true }
termwiz = { version = "0.22.0", optional = true }
unicode-width = "0.2.0"
serde = { version = "1", optional = true , features = ["derive"] }
autosurgeon = "0.8.7"
automerge = "0.6.1"
color-eyre = "0.6.5"
backtrace = "0.3.74"

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[[example]]
name = "vim"
required-features = ["crossterm"]

[[example]]
name = "sync"
required-features = ["crossterm"]

[workspace]
members = ["bench"]

[profile.bench]
lto = "thin"

[dev-dependencies]
serde_json = "1.0.120"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["search", "crossterm", "termwiz", "termion", "serde"]
rustdoc-args = ["--cfg", "docsrs"]
